--- a/components/practice.html
+++ b/components/practice.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Achievment</title>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="practice.css">
 </head>
 <body class="bg-white text-gray-800">
     <div class="container mx-auto p-8">
