--- a/components/practice.html
+++ b/components/practice.html
@@ -29,13 +29,13 @@
                 <!-- Education Card 2 -->
                 <div class="bg-white rounded-lg shadow-lg overflow-hidden transform transition duration-300 hover:scale-105 hover:shadow-xl">
                     <div class="p-8">
-                        <h2 class="text-xl font-semibold text-black mb-2">Example Online Course</h2>
-                        <p class="text-gray-700 mb-1">Full Stack Web Development Certification</p>
-                        <span class="text-sm text-gray-500">2020 - 2021</span>
-                        <a href="https://example.com/certificate2" target="_blank" class="inline-block mt-4 px-4 py-2 bg-orange-500 text-black font-semibold rounded-md shadow-md hover:bg-orange-600 transition duration-300">View Certificate</a>
+                        <h2 class="text-xl font-semibold text-black mb-2">Udemy</h2>
+                        <p class="text-gray-700 mb-1">Master Business Growth With Generative AI</p>
+                        <span class="text-sm text-gray-500">October - 2024</span>
+                        <a href="https://www.udemy.com/certificate/UC-57efae36-a826-4994-9e63-6be423ab7e58/" target="_blank" class="inline-block mt-4 px-4 py-2 bg-orange-500 text-black font-semibold rounded-md shadow-md hover:bg-orange-600 transition duration-300">View Certificate</a>
                     </div>
                     <div class="relative overflow-hidden">
-                        <img src="/images/AI power cer.png" alt="Certification Image" class="w-full h-30 object-cover transform transition duration-50 hover:scale-100">
+                        <img src="/images/master.jpg" alt="Certification Image" class="w-full h-30 object-cover transform transition duration-50 hover:scale-100">
                     </div>
                 </div>
 
