added card three

--- a/components/practice.html
+++ b/components/practice.html
@@ -22,7 +22,7 @@
                         <a href="https://www.udemy.com/certificate/UC-66466211-6b22-49f8-9945-c5ed98feed52/" target="_blank" class="inline-block mt-4 px-4 py-2 bg-orange-500 text-black font-semibold rounded-md shadow-md hover:bg-orange-600 transition duration-300">View Certificate</a>
                     </div>
                     <div class="relative overflow-hidden">
-                        <img src="/images/wordpress.png" alt="Certification Image" class="w-full h-30 object-cover transform transition duration-50 hover:scale-100">
+                        <img src="/images/skills.jpg" alt="Certification Image" class="w-full h-30 object-cover transform transition duration-50 hover:scale-100">
                     </div>
                 </div>
 
@@ -43,13 +43,13 @@
                  <!-- Education Card 3 -->
                 <div class="bg-white rounded-lg shadow-lg overflow-hidden transform transition duration-300 hover:scale-105 hover:shadow-xl">
                     <div class="p-8">
-                        <h2 class="text-xl font-semibold text-black mb-2">Example Online Course</h2>
-                        <p class="text-gray-700 mb-1">Full Stack Web Development Certification</p>
-                        <span class="text-sm text-gray-500">2020 - 2021</span>
-                        <a href="https://example.com/certificate2" target="_blank" class="inline-block mt-4 px-4 py-2 bg-orange-500 text-black font-semibold rounded-md shadow-md hover:bg-orange-600 transition duration-300">View Certificate</a>
+                        <h2 class="text-xl font-semibold text-black mb-2">Udemy</h2>
+                        <p class="text-gray-700 mb-1">Wordpress Website Developer</p>
+                        <span class="text-sm text-gray-500">October - 2024</span>
+                        <a href="https://www.udemy.com/certificate/UC-415c0047-4c92-4951-928e-bb31c7cc5df2/" target="_blank" class="inline-block mt-4 px-4 py-2 bg-orange-500 text-black font-semibold rounded-md shadow-md hover:bg-orange-600 transition duration-300">View Certificate</a>
                     </div>
                     <div class="relative overflow-hidden">
-                        <img src="/images/AI power cer.png" alt="Certification Image" class="w-full h-30 object-cover transform transition duration-50 hover:scale-100">
+                        <img src="/images/wordpress.png" alt="Certification Image" class="w-full h-30 object-cover transform transition duration-50 hover:scale-100">
                     </div>
                 </div>
             </div>
