added card one image

--- a/components/practice.html
+++ b/components/practice.html
@@ -22,7 +22,7 @@
                         <a href="https://www.udemy.com/certificate/UC-66466211-6b22-49f8-9945-c5ed98feed52/" target="_blank" class="inline-block mt-4 px-4 py-2 bg-orange-500 text-black font-semibold rounded-md shadow-md hover:bg-orange-600 transition duration-300">View Certificate</a>
                     </div>
                     <div class="relative overflow-hidden">
-                        <img src="/images" alt="Certification Image" class="w-full h-30 object-cover transform transition duration-50 hover:scale-100">
+                        <img src="/images/skill.png" alt="Certification Image" class="w-full h-30 object-cover transform transition duration-50 hover:scale-100">
                     </div>
                 </div>
 
