--- a/components/practice.html
+++ b/components/practice.html
@@ -35,7 +35,7 @@
                         <a href="https://www.udemy.com/certificate/UC-57efae36-a826-4994-9e63-6be423ab7e58/" target="_blank" class="inline-block mt-4 px-4 py-2 bg-orange-500 text-black font-semibold rounded-md shadow-md hover:bg-orange-600 transition duration-300">View Certificate</a>
                     </div>
                     <div class="relative overflow-hidden">
-                        <img src="/images/masters.jpg" alt="Certification Image" class="w-full h-30 object-cover transform transition duration-50 hover:scale-100">
+                        <img src="https://i.postimg.cc/QNnvnDm6/masters.jpg" alt="Certification Image" class="w-full h-30 object-cover transform transition duration-50 hover:scale-100">
                     </div>
                 </div>
 
