updated six card

--- a/components/practice.html
+++ b/components/practice.html
@@ -81,13 +81,13 @@
                 <!-- Education Card 6 -->
                 <div class="bg-white rounded-lg shadow-lg overflow-hidden transform transition duration-300 hover:scale-105 hover:shadow-xl">
                     <div class="p-8">
-                        <h2 class="text-xl font-semibold text-black mb-2">Udemy</h2>
-                        <p class="text-gray-700 mb-1">Communication Skills For Success - In Business Life</p>
-                        <span class="text-sm text-gray-500">October - 2024</span>
-                        <a href="https://www.udemy.com/certificate/UC-66466211-6b22-49f8-9945-c5ed98feed52/" target="_blank" class="inline-block mt-4 px-4 py-2 bg-orange-500 text-black font-semibold rounded-md shadow-md hover:bg-orange-600 transition duration-300">View Certificate</a>
+                        <h2 class="text-xl font-semibold text-black mb-2">HackerRank</h2>
+                        <p class="text-gray-700 mb-1">SQL <br> (Intermediate)</p>
+                        <span class="text-sm text-gray-500">September - 2024</span>
+                        <a href="https://www.hackerrank.com/certificates/adb3147a2d19/" target="_blank" class="inline-block mt-4 px-4 py-2 bg-orange-500 text-black font-semibold rounded-md shadow-md hover:bg-orange-600 transition duration-300">View Certificate</a>
                     </div>
                     <div class="relative overflow-hidden">
-                        <img src="https://i.postimg.cc/fRvBkPPx/skill.png" alt="Certification Image" class="w-full h-30 object-cover transform transition duration-50 hover:scale-100">
+                        <img src="/images/sql.png" alt="Certification Image" class="w-full h-30 object-cover transform transition duration-50 hover:scale-100">
                     </div>
                 </div>
                 <!-- Education Card 7 -->
