card four img link added

--- a/components/practice.html
+++ b/components/practice.html
@@ -63,7 +63,7 @@
                         <a href="https://www.coursera.org/account/accomplishments/specialization/DCN8U3CFIWO8/" target="_blank" class="inline-block mt-4 px-4 py-2 bg-orange-500 text-black font-semibold rounded-md shadow-md hover:bg-orange-600 transition duration-300">View Certificate</a>
                     </div>
                     <div class="relative overflow-hidden">
-                        <img src="/images/ML Deep.png" alt="Certification Image" class="w-full h-30 object-cover transform transition duration-50 hover:scale-100">
+                        <img src="https://i.postimg.cc/HL9xF25m/ML-Deep.png" alt="Certification Image" class="w-full h-30 object-cover transform transition duration-50 hover:scale-100">
                     </div>
                 </div>
                 <!-- Education Card 5 -->
