--- a/components/practice.html
+++ b/components/practice.html
@@ -75,7 +75,7 @@
                         <a href="https://www.hackerrank.com/certificates/a3bf7910994d/" target="_blank" class="inline-block mt-4 px-4 py-2 bg-orange-500 text-black font-semibold rounded-md shadow-md hover:bg-orange-600 transition duration-300">View Certificate</a>
                     </div>
                     <div class="relative overflow-hidden">
-                        <img src="/images/PSHR.png" alt="Certification Image" class="w-full h-30 object-cover transform transition duration-50 hover:scale-100">
+                        <img src="https://i.postimg.cc/QxKMjs50/PSHR.png" alt="Certification Image" class="w-full h-30 object-cover transform transition duration-50 hover:scale-100">
                     </div>
                 </div>
                 <!-- Education Card 6 -->
