--- a/components/practice.html
+++ b/components/practice.html
@@ -94,8 +94,8 @@
                 <div class="bg-white rounded-lg shadow-lg overflow-hidden transform transition duration-300 hover:scale-105 hover:shadow-xl">
                     <div class="p-8">
                         <h2 class="text-xl font-semibold text-black mb-2">Coursera DeepLearning.AI</h2>
-                        <p class="text-gray-700 mb-1">Supervised Machine Learning: Regression and Classification</p>
-                        <span class="text-sm text-gray-500">October - 2024</span>
+                        <p class="text-gray-700 mb-1">Supervised Machine Learning</p>
+                        <span class="text-sm text-gray-500">July - 2024</span>
                         <a href="https://www.coursera.org/account/accomplishments/verify/N9ZNPESL3TTQ/" target="_blank" class="inline-block mt-4 px-4 py-2 bg-orange-500 text-black font-semibold rounded-md shadow-md hover:bg-orange-600 transition duration-300">View Certificate</a>
                     </div>
                     <div class="relative overflow-hidden">
@@ -105,25 +105,25 @@
                 <!-- Education Card 8 -->
                 <div class="bg-white rounded-lg shadow-lg overflow-hidden transform transition duration-300 hover:scale-105 hover:shadow-xl">
                     <div class="p-8">
-                        <h2 class="text-xl font-semibold text-black mb-2">Coursera DeepLearning.AI</h2>
-                        <p class="text-gray-700 mb-1">Supervised Machine Learning: Regression and Classification</p>
-                        <span class="text-sm text-gray-500">October - 2024</span>
-                        <a href="https://www.udemy.com/certificate/UC-66466211-6b22-49f8-9945-c5ed98feed52/" target="_blank" class="inline-block mt-4 px-4 py-2 bg-orange-500 text-black font-semibold rounded-md shadow-md hover:bg-orange-600 transition duration-300">View Certificate</a>
+                        <h2 class="text-xl font-semibold text-black mb-2">Coursera</h2>
+                        <p class="text-gray-700 mb-1"> Foundations of User Experience (UX) Design</p>
+                        <span class="text-sm text-gray-500">June - 2024</span>
+                        <a href="https://coursera.org/share/6d99088a25df9ad6e9eb76dfb908e3a1/" target="_blank" class="inline-block mt-4 px-4 py-2 bg-orange-500 text-black font-semibold rounded-md shadow-md hover:bg-orange-600 transition duration-300">View Certificate</a>
                     </div>
                     <div class="relative overflow-hidden">
-                        <img src="https://i.postimg.cc/fRvBkPPx/skill.png" alt="Certification Image" class="w-full h-30 object-cover transform transition duration-50 hover:scale-100">
+                        <img src="https://i.postimg.cc/hvgN6L9k/ux.png" alt="Certification Image" class="w-full h-30 object-cover transform transition duration-50 hover:scale-100">
                     </div>
                 </div>
                 <!-- Education Card 9 -->
                 <div class="bg-white rounded-lg shadow-lg overflow-hidden transform transition duration-300 hover:scale-105 hover:shadow-xl">
                     <div class="p-8">
-                        <h2 class="text-xl font-semibold text-black mb-2">Udemy</h2>
-                        <p class="text-gray-700 mb-1">Communication Skills For Success - In Business Life</p>
-                        <span class="text-sm text-gray-500">October - 2024</span>
-                        <a href="https://www.udemy.com/certificate/UC-66466211-6b22-49f8-9945-c5ed98feed52/" target="_blank" class="inline-block mt-4 px-4 py-2 bg-orange-500 text-black font-semibold rounded-md shadow-md hover:bg-orange-600 transition duration-300">View Certificate</a>
+                        <h2 class="text-xl font-semibold text-black mb-2">HubSpot Academy</h2>
+                        <p class="text-gray-700 mb-1">Digital Marketing </p>
+                        <span class="text-sm text-gray-500">June - 2024</span>
+                        <a href="https://app.hubspot.com/academy/achievements/mscq0ndc/en/1/sadia-siddika-prova/digital-marketing/" target="_blank" class="inline-block mt-4 px-4 py-2 bg-orange-500 text-black font-semibold rounded-md shadow-md hover:bg-orange-600 transition duration-300">View Certificate</a>
                     </div>
                     <div class="relative overflow-hidden">
-                        <img src="https://i.postimg.cc/fRvBkPPx/skill.png" alt="Certification Image" class="w-full h-30 object-cover transform transition duration-50 hover:scale-100">
+                        <img src="https://i.postimg.cc/0Q14KYHz/digital-Marketing.png" alt="Certification Image" class="w-full h-30 object-cover transform transition duration-50 hover:scale-100">
                     </div>
                 </div>
                 <!-- Education Card 10 -->
