--- a/components/practice.html
+++ b/components/practice.html
@@ -130,12 +130,12 @@
                 <div class="bg-white rounded-lg shadow-lg overflow-hidden transform transition duration-300 hover:scale-105 hover:shadow-xl">
                     <div class="p-8">
                         <h2 class="text-xl font-semibold text-black mb-2">Udemy</h2>
-                        <p class="text-gray-700 mb-1">Communication Skills For Success - In Business Life</p>
-                        <span class="text-sm text-gray-500">October - 2024</span>
-                        <a href="https://www.udemy.com/certificate/UC-66466211-6b22-49f8-9945-c5ed98feed52/" target="_blank" class="inline-block mt-4 px-4 py-2 bg-orange-500 text-black font-semibold rounded-md shadow-md hover:bg-orange-600 transition duration-300">View Certificate</a>
+                        <p class="text-gray-700 mb-1">PHP</p>
+                        <span class="text-sm text-gray-500">June - 2024</span>
+                        <a href="https://www.udemy.com/certificate/UC-0d0e5e9b-8548-4025-ad4a-5f5a58196f11/" target="_blank" class="inline-block mt-4 px-4 py-2 bg-orange-500 text-black font-semibold rounded-md shadow-md hover:bg-orange-600 transition duration-300">View Certificate</a>
                     </div>
                     <div class="relative overflow-hidden">
-                        <img src="https://i.postimg.cc/fRvBkPPx/skill.png" alt="Certification Image" class="w-full h-30 object-cover transform transition duration-50 hover:scale-100">
+                        <img src="https://i.postimg.cc/ncSwGbPb/PHP.jpg" alt="Certification Image" class="w-full h-30 object-cover transform transition duration-50 hover:scale-100">
                     </div>
                 </div>
             </div>
