--- a/components/practice.html
+++ b/components/practice.html
@@ -163,7 +163,7 @@
                     </div>
                 </div>
                 <!-- Education Card 13 -->
-                <div class="bg-white rounded-lg shadow-lg overflow-hidden transform transition duration-300 hover:scale-105 hover:shadow-xl">
+                <!-- <div class="bg-white rounded-lg shadow-lg overflow-hidden transform transition duration-300 hover:scale-105 hover:shadow-xl">
                     <div class="p-8">
                         <h2 class="text-xl font-semibold text-black mb-2">Google Digital Academy (Skillshop)</h2>
                         <p class="text-gray-700 mb-1">AI-Powered Shopping ads Certification</p>
@@ -173,7 +173,7 @@
                     <div class="relative overflow-hidden">
                         <img src="https://i.postimg.cc/FFqq1N46/AI-power-cer.png" alt="Certification Image" class="w-full h-30 object-cover transform transition duration-50 hover:scale-100">
                     </div>
-                </div>
+                </div> -->
             </div>
         </section>
     </div>
